Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-21 (SVN):
    * updated all of the makefiles and the cross-build scripts.

2012-05-18 (SVN):
    * updated all build scripts.

2012-05-17 (SVN):
    * Combined the ReleaseNotes files. Updated rpm spec file to reflect
      the change.

2012-05-16 (SVN):
    * engine/h2shared/r_draw.c (R_RenderFace): Fixed -Wsign-compare.
    * engine/hexenworld/server/sv_main.c (SV_SendBan): Changed type from
      char to byte to fix -Wnarrowing.
    * hw_utils/hwmaster/sys_main.c (Sys_ConsoleInput): -Wsign-compare.
    * hw_utils/hwrcon/hwterm.c (main): Fixed another -Wsign-compare.
    * libs/timidity/common.c (safe_malloc): Fixed -Wformat in debug msg.
    * utils/texutils/bsp2wal/bsp2wal.c: De-constified WriteWALFile() and
      MakeWorkPath() because they actually write to their string args.
    * updated version date stamp to 2012-05-16.

2012-05-15 (SVN):
    * README: Clarified the joy_index documentation after svn rev. 4674.

2012-05-15 (SVN):
    * cvar.c: Added a note that not doing anything upon no change in
      the Cvar_Set*() functions is a behavior which the cvar callbacks
      may be relying upon.

2012-05-15 (SVN):
    * in_sdl.c: Added cvar callback functions IN_Callback_JoyEnable()
      and IN_Callback_JoyIndex(). We now keep only one joystick open
      and only if the functionality is enabled.

2012-05-15 (SVN):
    * sys_osx.m: Added missing include for unistd.h.

2012-05-15 (SVN):
    * Xcode project file update from Levent for Mac OS X.

2012-05-15 (SVN):
    * Added SDL joystick (gamepad) support. New cvars are documented in
      the README file. The code is based on darkplaces (svn rev.10980.)

2012-05-11 (SVN):
    * Updated documentation, mentioning and adding links to the RISC OS
      port of uhexen2.

2012-05-11 (SVN):
    * utils/dcc/dcc.c: When decompiling the progs.dat of the hcbots mod,