@@ -52,8 +52,9 @@ USE_CDAUDIO=yes
 USE_CODEC_WAVE=yes
 USE_CODEC_MP3=yes
 USE_CODEC_VORBIS=yes
+# either timidity or wildmidi (both possible
+# but not needed nor meaningful)
 USE_CODEC_TIMIDITY=yes
-# wildmidi is not supported
 USE_CODEC_WILDMIDI=no
 # which library to use for mp3 decoding: mad or mpg123
 MP3LIB=mad
